working on section 2 - moving some to chapter six - the maps part

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -638,7 +638,7 @@ When researching hands-on tinkering in Science museums Bevan and Petrich [-@petr
 Research on _concept maps_ [@canas2003summary] as methods for teachers and researchers to identify key learning suited to particular computing projects. Has traction for NCCE quick read. The value of facilitators mapping out concept which are likely to occur in project work can help with x, y and z.
 
 The knock on effect on reducing barriers to agency is of particular interest to this study.
-
+BUT IS THIS ADDRESSSED HERE?
 <!-- Another chapter in this collection identified concept maps and observation as methods for teachers and researchers to identify key learning suited to particular computing projects.  -->
 
 One of the outcomes of my research was to extract some of the concepts and practices that learners engaged with when making games from hours of recorded material. While some concepts are common to existing computational thinking frameworks others, including systems thinking concepts, are more unique to game making. Table 4.x. shows my resulting map of learning dimensions for the 3M game making model.
@@ -695,7 +695,7 @@ _Map of Learning Dimensions of the 3M Game Making Approach_
  - Draw on material and critique in chapter on semantic profiles / waves. -->
 
 
-
+<!--
 ### Using Physical Maps of Missions as Game Design Patterns
 
 I used flip chart paper and print outs to draw a coastal landscape with GDPs represented as different islands.  I asked learners to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it.
@@ -704,10 +704,9 @@ I used flip chart paper and print outs to draw a coastal landscape with GDPs rep
 ![learning islands]({{ site.imgurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png){width=95%}
 _Missions as Islands_
 
-My motivations for this intervention were that it encourage a sense of community and peer learning, to help learners navigate their design experience and that the process would encourage reflect on the coding concepts or other learning dimensions that they had been working with.
+My motivations for this intervention were that it encourage a sense of community and peer learning, to help learners navigate their design experience and that the process would encourage reflect on the coding concepts or other learning dimensions that they had been working with. The use of space on the map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions.
 
-The use of space on the map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions.
-
+The following excerpts of dialogue are from a fuller transcription in appendix 4.x
 
   Mick(f): I'm putting the ones that are hardest further away from our home island. So, because keys and doors is quite tricky, I'm going to put that one over there in the corner, if that's one that you're working on.  ( Mick cuts a out an image from [^4] representing a GDP of key and doors.)     Olivia(c): So I've gone really far away on the map.
 
@@ -722,7 +721,7 @@ The process of mapping the difficulty is something that the child picks up on he
 The new resources seem welcomed by the parent. This is probably as in previous sessions there had been conflict between them about goals. The process of aiding reflection and meta-cognition through the use of visual materials in the form of a map aligns with inclusive pedagogical design principles of UDL in that it provides means of action and expression. In chapter six, I explore the use of a process drama to achieve similar aims.
 
 While it is beyond the remit of this thesis to examine the impact of these processes in more curricular focused environments, the following section offers a synthesis of the ideas in explored in this chapter and alignment with existing research.
-
+ -->
 
 <!--
 MOVE TO END CHAPTER?
@@ -736,35 +735,37 @@ I am currently investigating replicating the use of maps process using online to
 
 #### Observations on tensions which the learning and navigational maps have potential to address.
 
-
-
-
-
+NOTE - more work to link this succinctly to literature is needed. 
 
 My experience of the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The following section aims to summarise the alignment of the potential of this work with existing research
 
-
-NOTE - more work to link this succinctly is needed.
-
 <!-- NOTE - Reduce this down to text - as too close to the end table. And reduce in significance. -->
 
-NOTE - Also add the following point.
+<!-- - It may not be clear how teachers can best support the direction of learners - addressed by the map linked to the collection of GDP used to support and identify possible pathways. -->
 
-- It may not be clear how teachers can best support the direction of learners - addressed by the map linked to the collection of GDP used to support and identify possible pathways.
-
-Facilitator stress if they are not able to support a very diverse set of features demanded by students working on diverse kinds of games. As a response, it may be practical to limit the type of game to one kind. Offer a significant but limited menu of missions that users can add. Offer written and visual support documents which learners can access independently of facilitators.
-
-
-Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assess and support learning. A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators.
-
-
-Challenges adapting resources to a curriculum environment
-There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition related concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map.
-
+Offering student choice creates stressful demands on a teacher trying to support a  diverse design paths (FIND SIMILAR STUDY). Rather than students working on varied game types and features, I found it practical to limit the type of game to one kind and offer a significant but limited menu of features that users can add and supporting documentation, a process explored in the next section. The mapping of specific features to the related concepts as outlined above can help teachers and students to overcome challenges of track and correlate the underlying curricular concepts being explored in these divergent  learning pathways.
 
 
 Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.   
 Systems related design patterns were identified and placed in a challenge themed section. Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context. (outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements)
+
+
+**Link Section**
+
+While the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The process of using these resources to align and highlight the design activities to underlying concepts is not explored in this study from the perspective of learners.
+
+Ultimately, I did not introduce the resources consistently with the learners of this study, instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities. In retrospect, my inaction seems appropriate to the informal context of this environment. It reflects the lack of external motivation for participants and myself to align to curricular concepts.
+
+
+
+<!-- Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assess and support learning. A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators. -->
+
+
+<!-- Challenges adapting resources to a curriculum environment
+There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition related concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map. -->
+
+
+
 
 <!--
 | **Tension identified**| **Commentary**|
@@ -791,12 +792,6 @@ Examples include;
 
 For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
 
-
-**Link Section**
-
-While the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The process of using these resources to align and highlight the design activities to underlying concepts is not explored in this study from the perspective of learners.
-
-Ultimately, I did not introduce the resources consistently with the learners of this study, instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities. In retrospect, my inaction seems appropriate to the informal context of this environment. It reflects the lack of external motivation for participants and myself to align to curricular concepts.
 
 
 ## 3. Tensions due to lack of access and familiarity to tools and processes
