--- a/_posts/thesis_chapters/archive/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/archive/2023-9-4-Design.md
@@ -386,8 +386,6 @@ While some game patterns were simple to add, e.g. altering the location of platf
 
 NOTE - Overall description and justification of this section.
 
-
-
 Toby undertakes some tasks fluently, for example his the quick navigation between different areas of the game code, the game preview window and  sources of documentation. Using the terminology of Leontiev [-@leontiev_activity_2009], in the example above Toby was undertaking certain chains of processes in a fluid way that shows that actions had become operations. As a facilitator of a community I aim to notice these transitions as I aim to use the proficiency of participants to help distribute the process of helping peers.
 
 In contrast, some tasks are new to Toby and are performed more hesitantly. In the example above Toby is careful is hesitant, checking and rechecking the process of copying and pasting new code into his game from a specially prepared code example which matches the game template he is working on. After inserting the code which adds a moving enemy to the game, Toby spends five minutes altering the variables involved to match his design and to create a level of challenge that he is happy with.
@@ -548,11 +546,7 @@ This section examines design contradictions between system elements and tensions
 
 <!-- In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways. -->
 
-The first outlines tensions due to clashes of identity and ambition. Responses are  outlined briefly here but explored in more depth in chapter six.
-
-The second is details resources created to align the game making programme school and curricular activities.  
-
-Two remaining sections key range of responses to key contradictions in the tool set of the early design, specifically addressing authoring tools and supporting documentation. In these sections, I explore tensions involving authenticity as a precursor to exploring their relationship with participants experience of agency.
+The first outlines tensions due to clashes of identity and ambition. Responses are  outlined briefly here but explored in more depth in chapter six. The second is details resources created to align the game making programme school and curricular activities.  Two remaining sections key range of responses to key contradictions in the tool set of the early design, specifically addressing authoring tools and supporting documentation. In these sections, I explore tensions involving authenticity as a precursor to exploring their relationship with participants experience of agency.
 
 **Note on methodology**
 This section is written from my own perspectives to inform discussion on design tensions. The process here is driven not only from user feedback but also on a more intuitive experience as an experienced facilitator in this field. I also draw on the tensions explored in the previous exploration of fellow participants.
