--- a/_posts/thesis_chapters/2023-12-6-Methods.md
+++ b/_posts/thesis_chapters/2023-12-6-Methods.md
@@ -218,6 +218,39 @@ Exploring classroom culture, Engeström [-@engestrom1998reorganizing] notes the 
 
 
 
+
+
+### Note this has been moved from Design chapter  so needs a place to sit. 
+### Using Physical Maps of Missions as Game Design Patterns
+
+I used flip chart paper and print outs to draw a coastal landscape with GDPs represented as different islands.  I asked learners to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it.
+
+![learning islands](./Pictures/navigational_paper_map.png){width=95%}
+![learning islands]({{ site.imgurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png){width=95%}
+_Missions as Islands_
+
+My motivations for this intervention were that it encourage a sense of community and peer learning, to help learners navigate their design experience and that the process would encourage reflect on the coding concepts or other learning dimensions that they had been working with. The use of space on the map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions.
+
+The following excerpts of dialogue are from a fuller transcription in appendix 4.x
+
+  Mick(f): I'm putting the ones that are hardest further away from our home island. So, because keys and doors is quite tricky, I'm going to put that one over there in the corner, if that's one that you're working on.  ( Mick cuts a out an image from [^4] representing a GDP of key and doors.)     Olivia(c): So I've gone really far away on the map.
+
+The process of mapping the difficulty is something that the child picks up on here. Moments after we see a parent using the map and the resources to help her child fix a goal for the session.
+
+  Rozanne(p): Oh that's something you were wanting to do	(Roxanne points at a cut out that Mick has just stuck down.)
+  Richie(c): I like the idea of making the enemies move.
+  Roxanne(p): Ok, there's a worksheet here about that. So you don't want to any any heath meter?
+  Richie(c): No.
+  Roxanne(p): At least not right now. You want to to do this, on a sheet, right here, here you go.	(Roxanne waves sheet and smiles at Mick.)
+
+The new resources seem welcomed by the parent. This is probably as in previous sessions there had been conflict between them about goals. The process of aiding reflection and meta-cognition through the use of visual materials in the form of a map aligns with inclusive pedagogical design principles of UDL in that it provides means of action and expression. In chapter six, I explore the use of a process drama to achieve similar aims.
+
+While it is beyond the remit of this thesis to examine the impact of these processes in more curricular focused environments, the following section offers a synthesis of the ideas in explored in this chapter and alignment with existing research.
+
+
+
+
+
 ### Barriers of identity hardcore coding & dysfunctional group work - REALLY COMPRESS UNLESS DATA BECOMES PRESENT - USE AS BASIS FOR DISCUSSION?
 
 NOTE DUPLICATION WITH DESIGN CHAPTER.
