lnking 2 to three

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -679,6 +679,46 @@ BOX ENDS
 
 While the process of creating these cards of game design patterns linked to the underlying framework is labour intensive, the process offers several potential benefits which may merit the effort, including linking curricular concepts to more concrete experience and aid in navigating the learning experience.
 
+
+
+
+
+#### Observations on tensions which the learning and navigational maps have potential to address.
+
+NOTE - more work to link this succinctly to literature is needed.
+
+My experience of the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The following section aims to summarise the alignment of the potential of this work with existing research
+
+<!-- NOTE - Reduce this down to text - as too close to the end table. And reduce in significance. -->
+
+<!-- - It may not be clear how teachers can best support the direction of learners - addressed by the map linked to the collection of GDP used to support and identify possible pathways. -->
+
+Offering student choice creates stressful demands on a teacher trying to support a  diverse design paths (FIND SIMILAR STUDY). Rather than students working on varied game types and features, I found it practical to limit the type of game to one kind and offer a significant but limited menu of features that users can add and supporting documentation, a process explored in the next section. The mapping of specific features to the related concepts as outlined above can help teachers and students to overcome challenges of track and correlate the underlying curricular concepts being explored in these divergent  learning pathways.
+
+
+Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities. To address this I identified and highlighted systems related design patterns themed as challenge-related patterns to explore systems concepts within the game context. This approach mirrors work undertaken by Gary on Game Star Mechanic , where
+
+(outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements)
+
+
+**Link Section**
+
+In work exploring my emergent findings, I explored the concept of semantic waves as a way of picturing the alternating between concrete design experience and implementing specific code structures, and communicating / exploring the underlying abstract concepts.  
+
+However, while the process of adapting this learning design to the needs of more formal settings can be aligned to existing research on this area. (on semantic maps, on abstract concepts), I was reluctant to introduce these resources in this setting. Instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities.
+
+In retrospect, my inaction seems appropriate to the informal context of this environment. It reflects the lack of external motivation for participants and myself to align to curricular concepts. Thus, while this aspect and merits further exploration to potential help classroom practice, this is be beyond the scope of this thesis. 
+
+<!-- The process of using these resources to align and highlight the design activities to underlying concepts is not explored in this study from the perspective of learners. -->
+
+
+
+
+
+
+
+
+
 <!--
 While this is an informal way of using maps the are other approaches that are more formal including one called a concept map which is a visual representation of target specialised knowledge. There is a section on concept maps as part of the teach computing website here. https://blog.teachcomputing.org/how-we-teach-computing/. -->
 <!-- ![Learning Dimensions](Pictures/learning_dimensions.jpg)
@@ -733,38 +773,11 @@ I am currently investigating replicating the use of maps process using online to
 
 
 
-#### Observations on tensions which the learning and navigational maps have potential to address.
-
-NOTE - more work to link this succinctly to literature is needed. 
-
-My experience of the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The following section aims to summarise the alignment of the potential of this work with existing research
-
-<!-- NOTE - Reduce this down to text - as too close to the end table. And reduce in significance. -->
-
-<!-- - It may not be clear how teachers can best support the direction of learners - addressed by the map linked to the collection of GDP used to support and identify possible pathways. -->
-
-Offering student choice creates stressful demands on a teacher trying to support a  diverse design paths (FIND SIMILAR STUDY). Rather than students working on varied game types and features, I found it practical to limit the type of game to one kind and offer a significant but limited menu of features that users can add and supporting documentation, a process explored in the next section. The mapping of specific features to the related concepts as outlined above can help teachers and students to overcome challenges of track and correlate the underlying curricular concepts being explored in these divergent  learning pathways.
-
-
-Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.   
-Systems related design patterns were identified and placed in a challenge themed section. Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context. (outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements)
-
-
-**Link Section**
-
-While the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The process of using these resources to align and highlight the design activities to underlying concepts is not explored in this study from the perspective of learners.
-
-Ultimately, I did not introduce the resources consistently with the learners of this study, instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities. In retrospect, my inaction seems appropriate to the informal context of this environment. It reflects the lack of external motivation for participants and myself to align to curricular concepts.
-
-
-
 <!-- Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assess and support learning. A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators. -->
 
 
 <!-- Challenges adapting resources to a curriculum environment
 There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition related concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map. -->
-
-
 
 
 <!--
