from notes on paper - start of part 3.

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -581,38 +581,8 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 <!-- NOTE - DEVELOP THIS ASPECT OF INCLUSIVE ENVIRONMENT TO REDUCE STRESS - MOVE FROM NEXT CHAPTER?  -->
 
 
-## 1. Conflicts due to identity clashes and dysfunctional group work
 
-<!-- **Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),** -->
-
-This conflict involved accumulating tensions which resulted in families feeling anxiety and alienation from the group coding environment and associated peer working dynamics.
-
-I illustrate this conflict using the experience of one family who withdrew from P1 three weeks before the end of the programme. In an early crisis point, one of the children  was not able to implement a desired feature as the 3D experience was beyond the technical possibilities of the code framework.
-
-The shared in feedback (see appendix 4.x) the moment that decided their withdrawal. At one point they looked around and just saw people doing hardcore coding and no longer felt at home in the environment. In early sessions the family members had planned design on paper and created digital pixel art. However in later sessions, they were reliant on others to implement code changes for their imagined game. In my journal notes I reflect that this experience was in a session where, due to a sense of urgency to complete games, I had omitted warm up activities to immediately support to help some participants debug code errors.
-
-To briefly summarise this dynamic using the language of 3GAT we can locate tensions between competing objectives. The shift from paper design stage with its greater freedom of choice and imagination to the technical limits and challenges appears to have created too great a rupture between this families objective to be creative and an uncompromising technical reality.  
-
-This experience aligns with research in this area explored in the literature review which explore pedagogies to address barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. I have shared the crisis of this family in particular, as the process drove me to focus on and further develop inclusive cultural practices which are explored in chapter six.
-
-
-<!-- NOTE -
-DEVELOP THIS IN LIT REVIEW - Start here [@kafai_constructionist_2015-1]
-
-Studies with pedagogies addressing barriers to do with identity and computer cultures
--->
-
-
-<!-- The value of playfulness is illustrated
-The freedom of choice and imagination allowed by designing on paper and via pixel art created compounding tensions. -->
-
-<!-- I had not played customary drama games to create an inclusive environment.
-
-That week I had omitted them as I felt a sense of urgency coming from families to solve their problems. The scarcity in facilitator time drove me to crack on supporting families to debug code errors. -->
-
-
-<!-- In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding. -->
-## 2. Facilitator conflict addressing tensions between privileging participant choices or underlying computing concepts
+## 1. Facilitator conflict addressing tensions between privileging participant choices or underlying computing concepts
 
 In this section I outline key tensions in the design that two interventions involving different forms of mapping have the potential to address in more formal teaching environments.
 
@@ -707,7 +677,7 @@ In work exploring my emergent findings, I explored the concept of semantic waves
 
 However, while the process of adapting this learning design to the needs of more formal settings can be aligned to existing research on this area. (on semantic maps, on abstract concepts), I was reluctant to introduce these resources in this setting. Instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities.
 
-In retrospect, my inaction seems appropriate to the informal context of this environment. It reflects the lack of external motivation for participants and myself to align to curricular concepts. Thus, while this aspect and merits further exploration to potential help classroom practice, this is be beyond the scope of this thesis. 
+In retrospect, my inaction seems appropriate to the informal context of this environment. It reflects the lack of external motivation for participants and myself to align to curricular concepts. Thus, while this aspect and merits further exploration to potential help classroom practice, this is be beyond the scope of this thesis.
 
 <!-- The process of using these resources to align and highlight the design activities to underlying concepts is not explored in this study from the perspective of learners. -->
 
@@ -806,21 +776,64 @@ Examples include;
 For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
 
 
+## 2. Conflicts due to identity clashes and dysfunctional group work
+
+<!-- **Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),** -->
+
+This conflict involved accumulating tensions which resulted in families feeling anxiety and alienation from the group coding environment and associated peer working dynamics.
+
+I illustrate this conflict using the experience of one family who withdrew from P1 three weeks before the end of the programme. In an early crisis point, one of the children  was not able to implement a desired feature as the 3D experience was beyond the technical possibilities of the code framework.
+
+The shared in feedback (see appendix 4.x) the moment that decided their withdrawal. At one point they looked around and just saw people doing hardcore coding and no longer felt at home in the environment. In early sessions the family members had planned design on paper and created digital pixel art. However in later sessions, they were reliant on others to implement code changes for their imagined game. In my journal notes I reflect that this experience was in a session where, due to a sense of urgency to complete games, I had omitted warm up activities to immediately support to help some participants debug code errors.
+
+To briefly summarise this dynamic using the language of 3GAT we can locate tensions between competing objectives. The shift from paper design stage with its greater freedom of choice and imagination to the technical limits and challenges appears to have created too great a rupture between this families objective to be creative and an uncompromising technical reality.  
+
+This experience aligns with research in this area explored in the literature review which explore pedagogies to address barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. I have shared the crisis of this family in particular, as the process drove me to focus on and further develop inclusive cultural practices which are explored in chapter six.
+
+
+<!-- NOTE -
+DEVELOP THIS IN LIT REVIEW - Start here [@kafai_constructionist_2015-1]
+
+Studies with pedagogies addressing barriers to do with identity and computer cultures
+-->
+
+
+<!-- The value of playfulness is illustrated
+The freedom of choice and imagination allowed by designing on paper and via pixel art created compounding tensions. -->
+
+<!-- I had not played customary drama games to create an inclusive environment.
+
+That week I had omitted them as I felt a sense of urgency coming from families to solve their problems. The scarcity in facilitator time drove me to crack on supporting families to debug code errors. -->
+
+
+<!-- In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding. -->
+
+
 
 ## 3. Tensions due to lack of access and familiarity to tools and processes
 
-In the terminology of activity theory, conflicts are conflation of tensions and contradictions which result in paralysis in the activity in question. One conflict, which surfaced in P1, stemmed from unfamiliarity with tools and game making processes and resulted in frustration and ultimately inaction.
+In the terminology of activity theory, a conflicts arose due to a contradictions between the desire of participants to use the tools to create games and their lack of experience and knowledge of them. This often resulted in frustration and paralysis in the activity in question.
 
-While, tensions stemming from gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting made direct teaching approaches unappealing. In P1 I trialled brief class instruction of key coding concepts, e.g. logic statements, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable. Instead, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010].
+NOTE  - VERY SIMILAR FOR NEXT CONFLICT - GROUP OR MAKE DISTINCT.
 
-The process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools.
+One conflict, which surfaced in P1, stemmed from unfamiliarity with tools and resulted in frustration and ultimately inaction. In participant feedback for P1, one parent of the family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach.
 
-The crux of the tension involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within the designed environment to facilitate participants to address gaps in their knowledge without needing explicit instruction. The following sections explore the evolution of the tool selection and the tool use of participants in response to this conflict in the game making activity system.
+While, tensions stemming from gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting made direct teaching approaches unappealing [EXPLORED SOMEWHERE ELSE?]. In P1 I trialled brief class instruction of key coding concepts, e.g. logic statements, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable. Instead, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010].
+
+
+
+SUM UP THE CONFLICT / TENSION MORE CLEARLY
+
+The crux of the challenge involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within that toolset to facilitate participants to address gaps in their knowledge without needing explicit instruction. The following sections explore the evolution of the tool selection and the tool use of participants in response to this conflict in the game making activity system.
+
+
 
  <!-- namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement. -->
 
 
 ### Motivations around in choice of toolset
+
+The process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools.
 
 One motivation was to align to authentic web technology due to my previous experience. The reason for working with code this authentic bears exploration. Characteristics of broader dimensions of authenticity of tools and processes in learning environments are explored in the literature review. A brief summary being: similarity to workplace settings; facilitating activity which serves a need of participants; an ability to showcased resulting work to an audience. FIND CITATION PBL?
 
@@ -834,6 +847,8 @@ A common question for this research is why not use Scratch (see LR / Glossary)? 
 
 My motivation for choice of code language (Javascript, Phaser) was driven by desire to be authentic and extensible. The use of glitch.com as a code playground significantly reduced technical barriers for students related to this choice. In terms of first impressions, learners first experience of the experience was in the process of playing a game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process.
 
+NOTE INTEGREATE HOW DESIGNING FOR AUTHENITITY IS A CHALLENGE HERE WHICH IS ALIGNED WITH PBL AND EXPERIENTIAL THEORY, FORESHADOW SHARED DIMENTIONS OF AUTHENTICITY WHICH ARE EXPLORED LATER.
+
 <!-- I took care to screen participants from processes and tools that were unrealistic for novices to use. -->
 
 <!-- NOTE - PERHAPS EXPLORE COMPLEXITIY OF IDES AS A BARRIER IN RESEARCH - SEE BLUE JAY AND GREEN FOOT TRAINING IDEs -->
@@ -842,10 +857,11 @@ My motivation for choice of code language (Javascript, Phaser) was driven by des
 
 ### Comparative observations on the use of a code playground
 
-Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users.
+Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. To shed light on this conflict and to situate later findings, this section collates relevant observations from my journal notes and video data on how participants used the tools introduced. 
 
-While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools.
-NOTE - WHY IS THIS USEFUL?
+<!-- NOTE - DROP - MAKE MORE DIRECT
+While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
+
 
 
 **Complexity of set up**
@@ -934,7 +950,8 @@ In my design, I have made similar decisions to shield participants from unwelcom
 
 In the domain of web technology, starter templates consist of pre-built collections of HTML, Javascript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
 
-The choice to use a starter template was driven by early experience in the experimental period of the design. In participant feedback for P1, one parent indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach.
+The choice to use a starter template was driven by early experience in the experimental period of the design.
+<!-- In participant feedback for P1, one parent indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. -->
 
 Other parents requested additional supporting resources which explained the coding structures used in accessible but detailed ways. A request which hinted at a more structured, instruction based approach. In addition, my own motivations to explore research claims which on the engagement value of prioritising modifications to for quick impact on the game and on allowing participants choose over what they wanted to add to their game next.
 
